--- a/Bortolin_Samuel_thesis_20.tex
+++ b/Bortolin_Samuel_thesis_20.tex
@@ -148,8 +148,8 @@
       % \afterpage{\null\thispagestyle{empty}\clearpage}
       
       \input{evaluation}
-      % \newpage
-      \afterpage{\null\thispagestyle{empty}\clearpage}
+      \newpage
+      % \afterpage{\null\thispagestyle{empty}\clearpage}
       
       \input{conclusions}
       % \newpage
