--- a/system_design.tex
+++ b/system_design.tex
@@ -225,4 +225,4 @@ The best degree and coefficients of the polynomial approximation are calculated 
 \end{minipage}
 \end{figure}
 
-I did not develop the part of machine learning, but I integrated an existing one into this project to get the final results, i.e. the number of people in the place of interest for each timestamp. Then the results, when available, are published to the dedicated queue (Back-End results) to be received by the subscribed consumer who could use this information to improve his business.
+I did not develop the part of machine learning, but I integrated an existing one into this project to get the final results, i.e. the number of people in the place of interest for each timestamp. Then the results, when available, are published to the dedicated queue (Back-End results) to be received by the subscribed consumer who could use this information to improve his business
