--- a/system_design.tex
+++ b/system_design.tex
@@ -193,8 +193,6 @@ At this point, it is possible to get the number of devices present in the place 
 
 Finally, data analysis is performed, as shown in the flowchart in figure~\ref{fig:flowML}. Trend (raising/lowering) and seasonality (repetition of the components) of the number of devices are extracted using a decomposition of the corresponding temporal series. Once these two variables are known, it is possible to apply to them the correct polynomial approximation relating to the current time slot to get the forecast of the people present in the place of interest.
 
-The best degree and coefficients of the polynomial approximation are calculated during the training phase/preparation of the model for each time slot of each day of the week, using manually-collected ground truth. Figure~\ref{fig:flowtrainML} shows the flowchart of the logic used in that phase.
-
 % \begin{figure}[h]
 % \centering 
 % \includegraphics[width=0.3\textwidth]{images/flowML} 
@@ -227,6 +225,16 @@ The best degree and coefficients of the polynomial approximation are calculated 
 
 I did not develop the part of machine learning, but I integrated an existing one into this project to get the final results, i.e. the number of people in the place of interest for each timestamp. Then the results, when available, are published to the dedicated queue (Back-End results) to be received by the subscribed consumer who could use this information to improve his business.
 
+
+\subsection{Preparation of the model}
+\label{sec:model}
+\vspace{0.2 cm} 
+
+The best degree and coefficients of the polynomial approximation are calculated during the training phase/preparation of the model for each time slot of each day of the week, using manually-collected ground truth. Figure~\ref{fig:flowtrainML} shows the flowchart of the logic used in that phase.
+
+In the timestamps where the ground truth is collected by the number of devices revealed in these timestamps, we get the trend and the seasonality of the annotated dataset.
+Using this dataset we train a regressor to find the best polynomial approximation for each considered time slot. We initially divide the dataset into train set and test set. The Machine Learning model performs a trend analysis to find the best polynomial approximation for each time slot. These values of the coefficients are stored to be used in the different time slots when data are collected to get the correct estimate of the number of people.
+
 The management of the different time processes is shown in figure~\ref{fig:timeprocesses}:
 \begin{itemize}
   \item Probe revelations from the data collector: a random point process with different MAC addresses.
@@ -240,3 +248,9 @@ The management of the different time processes is shown in figure~\ref{fig:timep
 \caption{Illustration of the management of the different time processes.}
 \label{fig:timeprocesses}
 \end{figure}
+
+Dirac delta function:
+$\delta$(t - t$_{0}$)
+
+Step function:
+$\chi$$_{[ t_{1} - t_{p}, t_{2} + t_{p} )}$ + $\chi$$_{[ t_{4} - t_{p}, t_{6} + t_{p} )}$
