--- a/first_page.tex
+++ b/first_page.tex
@@ -21,7 +21,7 @@
   \vspace{2.2 cm} 
   \Large\textsc{Final Dissertation\\} 
   \vspace{1.2 cm} 
-  \Huge\textsc{Estimating the number of people\\based on Wi-Fi signals\\}
+  \Huge\textsc{Estimating the number of people\\based on Wi-Fi probe request frames\\}
 
 
   \vspace{3.2 cm} 
