--- a/system_design.tex
+++ b/system_design.tex
@@ -235,7 +235,7 @@ The best degree and coefficients of the polynomial approximation are calculated 
 In the timestamps where the ground truth is collected by the number of devices revealed in these timestamps, we get the trend and the seasonality of the annotated dataset.
 Using this dataset we train a regressor to find the best polynomial approximation for each considered time slot. We initially divide the dataset into train set and test set. The Machine Learning model performs a trend analysis to find the best polynomial approximation for each time slot. These values of the coefficients are stored to be used in the different time slots when data are collected to get the correct estimate of the number of people.
 
-The management of the different time processes is shown in figure~\ref{fig:timeprocesses}:
+The management of the different time processes is shown in figure~\ref{fig:presenceMAC} and~\ref{fig:GTprocess}:
 \begin{itemize}
   \item Probe revelations from the data collector: a random point process with different MAC addresses.
   \item Presence of devices: a cadlag step function based on the revelations of the MAC addresses, obtained after the cleaning of the collected data.
@@ -244,13 +244,24 @@ The management of the different time processes is shown in figure~\ref{fig:timep
 
 \begin{figure}[h]
 \centering 
-\includegraphics[width=0.9\textwidth]{images/timeprocesses} 
-\caption{Illustration of the management of the different time processes.}
-\label{fig:timeprocesses}
+\includegraphics[width=0.9\textwidth]{images/presenceMAC} 
+\caption{Illustration of the collection of the ground truth.}
+\label{fig:presenceMAC}
 \end{figure}
 
-Dirac delta function:
-$\delta$(t - t$_{0}$)
+Step function for the presence of the different MAC addresses:
 
-Step function:
-$\chi$$_{[ t_{1} - t_{p}, t_{2} + t_{p} )}$ + $\chi$$_{[ t_{4} - t_{p}, t_{6} + t_{p} )}$
+presence MAC$_1$ $= 1 \cdot \chi_{[ t_{0} - t_{p}, t_{3} + t_{p} )} + 1 \cdot \chi_{[ t_{6} - t_{p}, t_{9} + t_{p} )}$
+
+presence of devices $= \sum_i$ precence MAC$_i$
+
+\begin{figure}[h]
+\centering 
+\includegraphics[width=0.9\textwidth]{images/GTprocess} 
+\caption{Illustration of the collection of the ground truth.}
+\label{fig:GTprocess}
+\end{figure}
+
+Dirac delta function for sampling the number of people presence:
+
+GT(t$_i$) $= g(t) \cdot \delta(t - t_{i})$
