--- a/Bortolin_Samuel_thesis_20.tex
+++ b/Bortolin_Samuel_thesis_20.tex
@@ -132,8 +132,8 @@
       % \input oppure \include
       %
       \input{introduction}
-      % \newpage
-      \afterpage{\null\thispagestyle{empty}\clearpage}
+      \newpage
+      % \afterpage{\null\thispagestyle{empty}\clearpage}
       
       \input{state_of_art}
       \newpage
