--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -7,6 +7,14 @@
 \vspace{4cm}
 
 
-\emph{
-  \dots{ thanks to my family, my girlfriend, my supervisors and all the U-Hopper team }\dots
-}
+\emph{ Thanks to my parents, who supported me in all my studies. }
+
+\emph{ Special thanks to all my grandparents for all they have done for me during my life path. }
+
+\emph{ Thanks to my girlfriend, who has been by my side during my university career. }
+
+\emph{ Thanks to all my friends, my classmates and my family that have supported me during this three years. }
+
+\emph{ Thanks to my supervisors and the owner of the Cafe where I conduced the validation, who made possible this thesis. }
+
+\emph{ Thanks to all the U-Hopper team for the support and the beautiful internship, although mainly was mainly done from home. }
