--- a/attachments.tex
+++ b/attachments.tex
@@ -1,30 +1,42 @@
 \chapter{Title of the first attachment}
+\label{cha:attach1}
 \vspace{0.4 cm} 
 
 The first attachment
 
 
-\section{Title}
+\section{Title1}
+\label{cha:title1}
 \vspace{0.2 cm} 
+
 The title of the first attachment
 
 
+\vspace{0.1 cm} 
 \subsection{Subtitle}
-\vspace{0.2 cm} 
+\label{cha:subtitle1}
+\vspace{0.1 cm} 
+
 The subtitle of the first attachment
 
 
 \chapter{Title of the second attachment}
-\vspace{0.2 cm} 
+\label{cha:attach2}
+\vspace{0.4 cm} 
 
 The second attachment
 
 
-\section{Title}
+\section{Title2}
+\label{cha:title2}
 \vspace{0.2 cm} 
+
 The title of the second attachment
 
 
-\subsection{Subtitle}
-\vspace{0.2 cm} 
+\vspace{0.1 cm} 
+\subsection{Subtitle2}
+\label{cha:subtitle2}
+\vspace{0.1 cm} 
+
 The subtitle of the second attachment
