--- a/conclusions.tex
+++ b/conclusions.tex
@@ -2,11 +2,28 @@
 \label{cha:conclusions}
 \vspace{0.4 cm} 
 
-Write conclusions about the work done \dots
+This chapter reports the conclusions and summary of the work done. At the end of the thesis, some ideas for future works are suggested.
 
 
-\section{Future work}
+\section{Summary}
 \label{sec:future}
 \vspace{0.2 cm} 
 
-Write about future work \dots
+Summary of the work done:
+\begin{itemize}
+  \item It is possible to continuously estimate the number of people based on the Wi-Fi probe request frames.
+  \item Designed and developed a system to do that.
+  \item Tested the system in a Cafe and collected 4 weeks of data and manually-annotated ground truth.
+\end{itemize}
+
+
+\section{Future works}
+\label{sec:future}
+\vspace{0.2 cm} 
+
+Ideas for future works:
+\begin{itemize}
+  \item Real-Time integration.
+  \item Test the system in different context.
+  \item Improve the Machine Learning model.
+\end{itemize}
