--- a/evaluation.tex
+++ b/evaluation.tex
@@ -44,7 +44,7 @@ Once the Machine Learning model is trained with the collected ground truth and t
   \item For each revelation scaled\_MAE\_trend += abs$\Bigl(\frac{people\_present - people\_estimated}{people\_present} \Bigr)$ and in the end\\Scaled\_MAE\_trend/revelation = $\frac{scaled\_MAE\_trend}{revelation}$
 \end{itemize}
 
-In figure~\ref{fig:testresults1} and~\ref{fig:testresults2} some results and useful processing information are reported.
+In figure~\ref{fig:testresults1},~\ref{fig:testresults2} and~\ref{fig:testresults3} some results and useful processing information are reported.
 
 \begin{figure}[h]
 \centering 
@@ -58,6 +58,13 @@ In figure~\ref{fig:testresults1} and~\ref{fig:testresults2} some results and use
 \includegraphics[width=1\textwidth]{images/testresults2} 
 \caption{Illustration of the results and useful processing information of the second week.}
 \label{fig:testresults2}
+\end{figure}
+
+\begin{figure}[h]
+\centering 
+\includegraphics[width=1\textwidth]{images/testresults3} 
+\caption{Illustration of the results and useful processing information of the third week.}
+\label{fig:testresults3}
 \end{figure}
 
 % Finally, in figure~\ref{fig:comparison},~\ref{fig:differentseries},~\ref{fig:absoluteerror},~\ref{fig:errorpres},~\ref{fig:scatterplotpres},~\ref{fig:errorest},~\ref{fig:scatterplotest} there are some graphs created to show the Machine Learning results in terms of errors and comparison of the estimates between revealed devices and the ground truth.
