--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -78,7 +78,7 @@ Shen et al. proposed a shopping group detection system using Wi-Fi. Experimental
 Using real-world data collected in a large social event by a network of passive Wi-Fi sensors Zhou et al. extracted patterns related to crowd behaviors \cite{zhou2020understanding}.
 Singh et al. proposed a first-hand application of Wi-Fi sensors and LSTM (Long Short Term Memory) neural network for crowd forecasting and large-scale public event monitoring \cite{singh2020crowd}.
 
-The particular case of people estimation on public transport such as buses is a complex application because, unlike the estimation in a static place such as a shop, it is necessary to consider that the vehicle is in motion. Therefore, the presence of people waiting at the stops, people in the traffic, pedestrians and other things should be considered during the data cleaning phase. The esteem of people in public transport is a really interesting challenge that is dealt with in literature. This can provide some useful information to public transport managers, from which they can better manage the routes and reorganize the distribution of their vehicles.
+The particular case of people estimation on public transport such as buses is a complex application because, unlike the estimation in a static place such as a shop, it is necessary to consider that the vehicle is in motion. Therefore, the presence of people waiting at the stops, people in the traffic, pedestrians and other things should be considered during the data cleaning phase. The estimation of people in public transport is a really interesting challenge that is dealt with in literature. This can provide some useful information to public transport managers, from which they can better manage the routes and reorganize the distribution of their vehicles.
 
 Handte et al. presented a navigation system for bus passengers that has the ability to seamlessly interconnect bus passengers with the real-world public bus infrastructure. Using the occupancy classes to classify the prediction (low, medium, and high occupancy), they got an exact match accuracy of 61.9\% \cite{handte2016internet}. This work provides an indication of the feasibility of real-time information but accuracy can certainly be improved with the use of machine learning techniques.
 
